; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_write_var_init.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_write_var_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [38 x i8] c"MIDL_memset(&%s%s, 0, sizeof(%s%s));\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"%s_p_%s = &%s%s;\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"%s%s = 0;\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i8*, i8*)* @write_var_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_var_init(i32* %0, i32 %1, i32* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i64 @decl_indirect(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %29

14:                                               ; preds = %5
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 (i32*, i32, i8*, i8*, i8*, ...) @print_file(i32* %15, i32 %16, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8* %17, i8* %18, i8* %19, i8* %20)
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %10, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = call i32 (i32*, i32, i8*, i8*, i8*, ...) @print_file(i32* %22, i32 %23, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %24, i8* %25, i8* %26, i8* %27)
  br label %44

29:                                               ; preds = %5
  %30 = load i32*, i32** %8, align 8
  %31 = call i64 @is_ptr(i32* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %37, label %33

33:                                               ; preds = %29
  %34 = load i32*, i32** %8, align 8
  %35 = call i64 @is_array(i32* %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %33, %29
  %38 = load i32*, i32** %6, align 8
  %39 = load i32, i32* %7, align 4
  %40 = load i8*, i8** %10, align 8
  %41 = load i8*, i8** %9, align 8
  %42 = call i32 (i32*, i32, i8*, i8*, i8*, ...) @print_file(i32* %38, i32 %39, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %40, i8* %41)
  br label %43

43:                                               ; preds = %37, %33
  br label %44

44:                                               ; preds = %43, %14
  ret void
}

declare dso_local i64 @decl_indirect(i32*) #1

declare dso_local i32 @print_file(i32*, i32, i8*, i8*, i8*, ...) #1

declare dso_local i64 @is_ptr(i32*) #1

declare dso_local i64 @is_array(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
